--- a/assets/main.css
+++ b/assets/main.css
@@ -536,7 +536,8 @@
     right: -4px;
 }
 
-.header__cart-wrap:hover .header__cart-list{
+.header__cart-wrap:hover .header__cart-list,
+.header__cart-wrap:hover .header__cart-list--no-cart{
     display: block;
     cursor: default;
 
@@ -559,7 +560,8 @@
     margin-top: 6px;
 }
 
-.header__cart-list{
+.header__cart-list,
+.header__cart-list--no-cart{
     position: absolute;
     top: calc(100% + 6px);
     right: -4px;
@@ -585,11 +587,10 @@
 
 .header__cart-no-cart-img{
     width: 54%;
-    display: none;
+
 }
 
 .header__cart-list-no-cart-msg{
-    display: none;
     font-size: 1.4rem;
     margin-top: 14px;
     color: var(--text-color);
@@ -603,6 +604,7 @@
     font-size: 1.4rem;
     color: #999;
     font-weight: 400;
+    display: none;
 }
 
 .header__cart-list-item{
@@ -610,6 +612,7 @@
     list-style: none;
     height: 56vh;
     overflow-y: auto;
+    display: none;
 }
 
 .header__cart-item{
@@ -694,6 +697,7 @@
 .header__cart-view-cart{
     float: right;
     margin: 0 12px 12px 0;
+    display: none;
 }
 
 .header__cart-view-cart:hover{
