Saving to Github

--- a/assets/main.css
+++ b/assets/main.css
@@ -843,6 +843,7 @@
     box-shadow: 0 1px 5px rgb(189, 189, 189);
     display: none;
     overflow: hidden;
+    z-index: 1;
 }
 
 .header__search-history-heading{
